# regrender

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ccf2d/: __main__.py  core.py  main_probe.py  main_register.py  main_roi.py  main_view.py  slice_app.py
docs/source/: conf.py  index.rst
docs/source/get_start/: data_structure.rst  index.rst  installation.rst  probe.rst  register.rst  roi.rst
regrender/: __main__.py  _app.py  _core.py  core.py  main_probe.py  main_register.py  main_roi.py  slice_app.py
tests/: test_core.py  test_probe.py  test_roi.py
