[project]
name = "regrender"
version = "0.1.0"
description = "2D mouse brain registration, ROI annotation, and brainrender reconstruction"
readme = "README.md"
authors = [
    { name = "Yu-Ting Wei", email = "ytsimon2004@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "argclz>=1.0.1",
    "neuralib-atlas[brainrender]>=0.7.3",
    "numba>=0.60",
    "napari[pyqt5]",
    "imageio",
]

[project.optional-dependencies]

doc = [
    'sphinx',
    'pydata-sphinx-theme',
    'sphinx_copybutton'
]

test = [
    'pytest'
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
regrender = "regrender.__main__:main"
